lab11_mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    name: mysql-pod
spec:
  containers:
    - name: mysql-pod
      image: supergiantkir/animals:bear
