lab11_redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    name: redis-pod
spec:
  affinity:
    podAntiAffinity: 
      preferredDuringSchedulingIgnoredDuringExecution: 
      - weight: 100  
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: mysql-pod 
              operator: In 
              values:
              - S2
          topologyKey: kubernetes.io/hostname
  containers:
    - name: redis
      image: supergiantkir/animals:bear
