lab9-selector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  labels:
    app: nginx
    env: prod
spec:
  containers:
  - name: nginx2
    image: nginx
    ports:
    - containerPort: 80
  nodeSelector:
    db: run
