lab15_canary_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moose-ingress

spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix

       backend:
         service:
           name: moose-svc
           port:
             number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bear-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"

spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - path: /
          pathType: Prefix

          backend:
            service:
              name: bear-svc
              port:
                number: 80
